(library
 (name unison_lib)
 (wrapped false)
 (modules :standard \ linktext linkgtk3 uigtk3 uimacbridge test)
 (modules_without_implementation ui)
 (flags :standard
        -w -3-6-9-10-26-27-32-34-35-38-39-50-52
        -warn-error -3-6-9-10-26-27-32-34-35-39-50-52
        -no-strict-sequence)
 (foreign_stubs
  (language c)
  (names bytearray_stubs osxsupport pty hash_compat props_xattr))
 (c_library_flags -lutil)
 (libraries str unix lwt_lib bigarray))

(include_subdirs unqualified)

(executable
 (name linktext)
 (public_name unison)
 (package unison)
 (modules linktext)
 (libraries unison_lib))

(executable
 (name linkgtk3)
 (public_name unison-gui)
 (package unison-gui)
 (flags :standard -w -3-6-9-27-32-52)
 (modules linkgtk3 uigtk3)
 (libraries threads unison_lib lablgtk3))
